--- a/404.html
+++ b/404.html
@@ -1,8 +1,17 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<titile>404页面</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>404.</title>
 </head>
-<h1>404</h1>
+
 <body>
-<a href="http://www.sh48.com">返回首页</a>
+<h1 style="text-align:center"><strong><a href="http://www.sh48.com">返回首页</a></strong></h1>
+  
+  <div style="display:none">
+            <script type="text/javascript">
+var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1257193162'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/stat.php%3Fid%3D1257193162%26show%3Dpic1' type='text/javascript'%3E%3C/script%3E"));
+            </script>
+        </div>
 </body>
+</html>
