--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2, user-scalable=0">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>鞠婧祎唱吧音乐</title>
-	<meta name="keywords" content="鞠婧祎，jujingyi，唱吧，MP3，音乐，鞠婧祎后援会，后援会" />
-    <meta name="description" content="鞠婧祎唱吧音乐" />
-    <link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/tplayer.css" />
-    <link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/font-awesome.min.css" />
-    <script src="//kikuchanj.gitee.io/mp3/js/jquery.js"></script>
-    <script src="//kikuchanj.gitee.io/mp3/js/jquery-ui.js"></script>
-    <script src="//kikuchanj.gitee.io/mp3/js/tPlayer.js"></script>
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2, user-scalable=0">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>鞠婧祎唱吧音乐</title>
+<meta name="keywords" content="鞠婧祎，jujingyi，唱吧，MP3，音乐，鞠婧祎后援会，后援会" />
+<meta name="description" content="鞠婧祎唱吧音乐" />
+<link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/tplayer.css" />
+<link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/font-awesome.min.css" />
+<script src="//kikuchanj.gitee.io/mp3/js/jquery.js"></script>
+<script src="//kikuchanj.gitee.io/mp3/js/jquery-ui.js"></script>
+<script src="//kikuchanj.gitee.io/mp3/js/tPlayer.js"></script>
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+<script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
 </head>
 <body>
     <div id="t_wrapper">
         <div id="t_cover">
-        	<img src="./images/logo.jpg">
+        	<img src="//kikuchanj.gitee.io/mp3/images/logo.jpg">
         </div>
     	<div id="t_top">
     		<div id="t_title_info">
@@ -347,7 +347,7 @@
 
 <div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';">
 <p><a href="//www.kikuchanj.com/" target="_blank">kikuchanj.com</a>&nbsp;邮箱：admin@kikuchanj.com</p>
-<p>仅存档</p>
+<p>仅作存档</p>
 </div>
 <div style="display:none">
 
