--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div id="t_wrapper">
         <div id="t_cover">
-        	<img src="//kikuchanj.gitee.io/mp3/images/logo.jpg">
+        	<img src="//kikuchanj.gitee.io/mp3/images/logo.png">
         </div>
     	<div id="t_top">
     		<div id="t_title_info">
