--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2, user-scalable=0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Access-Control-Allow-Origin" content="*">
 <title>鞠婧祎唱吧音乐</title>
 <meta name="keywords" content="鞠婧祎，jujingyi，唱吧，MP3，音乐，鞠婧祎后援会，后援会" />
 <meta name="description" content="鞠婧祎唱吧音乐" />
