--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <title>鞠婧祎唱吧音乐</title>
 <meta name="keywords" content="鞠婧祎，jujingyi，唱吧，MP3，音乐，鞠婧祎后援会，后援会" />
 <meta name="description" content="鞠婧祎唱吧音乐" />
-<link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/tplayer.css" />
-<link rel="stylesheet" type="text/css" href="//kikuchanj.gitee.io/mp3/css/font-awesome.min.css" />
-<script src="//kikuchanj.gitee.io/mp3/js/jquery.js"></script>
-<script src="//kikuchanj.gitee.io/mp3/js/jquery-ui.js"></script>
-<script src="//kikuchanj.gitee.io/mp3/js/tPlayer.js"></script>
+<link rel="stylesheet" type="text/css" href="/css/tplayer.css" />
+<link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.1.0/css/font-awesome.min.css" />
+<script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.js"></script>
+<script src="https://cdn.bootcss.com/jqueryui/1.11.1/jquery-ui.js"></script>
+<script src="/js/tPlayer.js"></script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
