--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div id="t_wrapper">
         <div id="t_cover">
-        	<img src="logo.png">
+        	<img src="images/logo.png">
         </div>
     	<div id="t_top">
     		<div id="t_title_info">
